Mantis ChangeLog

2003.??.??  -  0.18.0a3

 * Fix: META redirects were not XHTML-compliant
 * Languages: Updated German localisation.

2003.02.19  -  0.18.0a2

 * Behaviour change: Project documentation is now sorted by title
 * Enhancement: Project name is shown in print_bug_page
 * Fix: #2938: 'Double quotes not handled correctly in manage_custom_field_edit_page' 
 * Fix: handle special characters correctly in the rest of the manage_custom_field_* pages
 * Fix: #2937: 'Double quotes not handled correctly in version names'
 * Fix: #2936: 'SYSTEM WARNING: ob_gzhandler() used twice'
 * Fix: #2941: Checking that project upload path exists and is writable to webserver
 * Fix: #2943: Document title should be mandatory
 * Fix: #2949: News title and body should be mandatory.
 * Fix: #2952: Email address of news poster always visible.
 * Fix: at various places, the currently selected project (as specified by the cookie) was used instead of i.e. a bug's project
 * Fix: lang_api did not load the user's preferred language
 * Fix: obscure error when database connect failed
 * Fix: error when deleting news items
 * Fix: we no longer execute thousands of queries in view_all_bug_page when there are a lot of users in the database
 * Fix: the sort direction in 'View all bugs' was passed directly to the query
 * New config option (mail_priority): if use_x_priority is set to ON, what should the value of X-Priority be? The default is 3 (instead of 0 in previous version, which was misinterpreted by some MTAs)
 * New config option (long_process_timeout): the number of seconds to give long executing pages (like database upgrades) to complete before aborting them (defaults to 0 which is unlimited)
 * New config option (private_project_threshold): threshold needed to get into private project automatically
 * Removed config option (mail_send_crlf): having this option off (default) violated RFC 822bis and there shouldn't be any server which required it to be set to off